--- a/pom.xml
+++ b/pom.xml
@@ -7,25 +7,27 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
+				<groupId>com.akathist.maven.plugins.launch4j</groupId>
+				<artifactId>launch4j-maven-plugin</artifactId>
+				<version>2.5.3</version>
 				<executions>
 					<execution>
+						<id>l4j-clui</id>
 						<phase>package</phase>
 						<goals>
-							<goal>single</goal>
+							<goal>launch4j</goal>
 						</goals>
 						<configuration>
-							<archive>
-								<manifest>
-									<mainClass>
-										com.baeldung.executable.ExecutableMavenJar
-									</mainClass>
-								</manifest>
-							</archive>
-							<descriptorRefs>
-								<descriptorRef>jar-with-dependencies</descriptorRef>
-							</descriptorRefs>
+							<headerType>gui</headerType>
+							<outfile>
+								${project.build.directory}/${project.build.finalName}.exe</outfile>
+							<jar>
+								${project.build.directory}/${project.build.finalName}.jar</jar>
+							<errTitle>App Error</errTitle>
+							<classPath>
+								<mainClass>
+									com.baeldung.executable.ExecutableMavenJar</mainClass>
+							</classPath>
 						</configuration>
 					</execution>
 				</executions>
