--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,7 @@
 								${project.build.directory}/${project.build.finalName}.jar</jar>
 							<errTitle>App Error</errTitle>
 							<classPath>
-								<mainClass>
-									com.baeldung.executable.ExecutableMavenJar</mainClass>
+								<mainClass>main.InterfazSimple</mainClass>
 							</classPath>
 						</configuration>
 					</execution>
